[gd_scene load_steps=49 format=3 uid="uid://cm6j5lfx7dqxh"]

[ext_resource type="Script" uid="uid://brqm81my466fy" path="res://main.gd" id="1_a7jvs"]
[ext_resource type="Texture2D" uid="uid://b86lgdi3ixbg3" path="res://Art/beach_bg.png" id="1_b226h"]
[ext_resource type="Texture2D" uid="uid://cv7qp5fyqeocv" path="res://Art/waves.png" id="2_duh1u"]
[ext_resource type="Shader" uid="uid://cb3lnt74cap5v" path="res://Shaders/world_1.gdshader" id="2_geirw"]
[ext_resource type="Script" uid="uid://b27jd4lupg6e1" path="res://Scripts/waves.gd" id="3_alxvg"]
[ext_resource type="Shader" uid="uid://bpuuaesvar65o" path="res://Shaders/jolt.gdshader" id="5_nn7w8"]
[ext_resource type="Texture2D" uid="uid://dqgj58v6kjtew" path="res://Art/M.png" id="5_rsiac"]
[ext_resource type="Texture2D" uid="uid://diyl3p7j02wbq" path="res://Art/J.png" id="6_3bmuq"]
[ext_resource type="FontFile" uid="uid://5nfnkgru3213" path="res://Font/Mansalva-Regular.ttf" id="7_3bmuq"]
[ext_resource type="Shader" uid="uid://v8n8aqjlcgr" path="res://Shaders/wiggle.gdshader" id="8_ewknp"]
[ext_resource type="Texture2D" uid="uid://b1c0inb6kny4c" path="res://Shaders/white-noise-screen.png" id="9_a7jvs"]
[ext_resource type="Texture2D" uid="uid://dhgxw8v4etit7" path="res://Art/portraits_full/A/a1-0.png" id="12_odey0"]
[ext_resource type="Texture2D" uid="uid://sm507mdgohjx" path="res://Art/portraits_full/C/C1-0.png" id="13_iab25"]
[ext_resource type="Texture2D" uid="uid://ds4vas5iui81h" path="res://Art/portraits_full/B/B1-0.png" id="13_sb6eq"]
[ext_resource type="Texture2D" uid="uid://d2gej3odsblcq" path="res://Art/portraits_full/C/C1-1.png" id="14_b6uv1"]
[ext_resource type="Texture2D" uid="uid://yd2timg5ser1" path="res://Art/portraits_full/A/a1-1.png" id="14_yny27"]
[ext_resource type="Texture2D" uid="uid://6nw0dofdym3c" path="res://Art/portraits_full/C/C1-2.png" id="15_et3xt"]
[ext_resource type="Texture2D" uid="uid://dk6yhf2coj0ej" path="res://Art/portraits_full/A/a1-2.png" id="16_3pufg"]
[ext_resource type="Texture2D" uid="uid://b6wl0ln6bpnxs" path="res://Art/portraits_full/B/B1-1.png" id="16_ff4s0"]
[ext_resource type="Texture2D" uid="uid://i0fujnl70vw1" path="res://Art/portraits_full/C/C2-0.png" id="16_jfi4t"]
[ext_resource type="Texture2D" uid="uid://of1xcky3hveu" path="res://Art/portraits_full/C/C2-1.png" id="17_b6uv1"]
[ext_resource type="Texture2D" uid="uid://c2a3lgj6das3h" path="res://Art/portraits_full/C/C2-2.png" id="18_et3xt"]
[ext_resource type="Texture2D" uid="uid://0hcha6ybfnf0" path="res://Art/portraits_full/A/A2-0.png" id="18_kddu7"]
[ext_resource type="Texture2D" uid="uid://dchpec4scbsc" path="res://Art/portraits_full/B/B1-2.png" id="19_x4krp"]
[ext_resource type="Texture2D" uid="uid://davhbhb3mvfme" path="res://Art/portraits_full/A/A2-1.png" id="20_2n2py"]
[ext_resource type="Texture2D" uid="uid://danhiq3pf7rpp" path="res://Art/portraits_full/B/B2-0.png" id="22_h2abu"]
[ext_resource type="Texture2D" uid="uid://b2irr4an0avs4" path="res://Art/portraits_full/A/A2-2.png" id="22_uqcso"]
[ext_resource type="Texture2D" uid="uid://dglbv04bfd6vm" path="res://Art/portraits_full/B/B2-1.png" id="25_pr6kk"]
[ext_resource type="Texture2D" uid="uid://d25x0gt8cir1a" path="res://Art/portraits_full/B/B2-2.png" id="28_fhahs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hwjxs"]
shader = ExtResource("2_geirw")
shader_parameter/wave_speed = 3.0
shader_parameter/wave_scale = 44.15
shader_parameter/distortion_strength = 0.005
shader_parameter/player_velocity = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b26wi"]
shader = ExtResource("5_nn7w8")
shader_parameter/jolt_strength_pixels = 1.0
shader_parameter/jumps_per_second = 4.0
shader_parameter/jitter_scale = 1.0
shader_parameter/seed = 123.0
shader_parameter/soften = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ewknp"]
shader = ExtResource("5_nn7w8")
shader_parameter/jolt_strength_pixels = 1.0
shader_parameter/jumps_per_second = 4.0
shader_parameter/jitter_scale = 1.0
shader_parameter/seed = 123.0
shader_parameter/soften = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pgam6"]
shader = ExtResource("8_ewknp")
shader_parameter/scale = Vector2(1, 1)
shader_parameter/strength = 1.0
shader_parameter/fps = 6.0
shader_parameter/noise = ExtResource("9_a7jvs")

[sub_resource type="FontVariation" id="FontVariation_nn7w8"]
base_font = ExtResource("7_3bmuq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a7jvs"]
shader = ExtResource("8_ewknp")
shader_parameter/scale = Vector2(1, 1)
shader_parameter/strength = 1.0
shader_parameter/fps = 6.0
shader_parameter/noise = ExtResource("9_a7jvs")

[sub_resource type="FontVariation" id="FontVariation_b26wi"]
base_font = ExtResource("7_3bmuq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_odey0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yny27"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_odey0")
}],
"loop": true,
"name": &"A",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_sb6eq")
}],
"loop": true,
"name": &"B",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_iab25")
}],
"loop": true,
"name": &"C",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3pufg"]
shader = ExtResource("5_nn7w8")
shader_parameter/jolt_strength_pixels = 1.938
shader_parameter/jumps_per_second = 5.0
shader_parameter/jitter_scale = 0.5
shader_parameter/seed = 123.0
shader_parameter/soften = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_kddu7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_yny27")
}],
"loop": true,
"name": &"A",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_ff4s0")
}],
"loop": true,
"name": &"B",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_b6uv1")
}],
"loop": true,
"name": &"C",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2n2py"]
shader = ExtResource("2_geirw")
shader_parameter/wave_speed = 0.3
shader_parameter/wave_scale = 30.0
shader_parameter/distortion_strength = 0.005
shader_parameter/player_velocity = Vector2(0, 0)

[sub_resource type="SpriteFrames" id="SpriteFrames_uqcso"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_3pufg")
}],
"loop": true,
"name": &"A",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_x4krp")
}],
"loop": true,
"name": &"B",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_et3xt")
}],
"loop": true,
"name": &"C",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_b6uv1"]
offsets = PackedFloat32Array(0, 0.506494, 1)
colors = PackedColorArray(0.974771, 0.613519, 0.368774, 1, 0.534985, 0.293827, 0.180589, 1, 0.592487, 0.3187, 1.92523e-07, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jfi4t"]
gradient = SubResource("Gradient_b6uv1")

[sub_resource type="SpriteFrames" id="SpriteFrames_k86p3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_kddu7")
}],
"loop": true,
"name": &"A",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_h2abu")
}],
"loop": true,
"name": &"B",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_jfi4t")
}],
"loop": true,
"name": &"C",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_et3xt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_2n2py")
}],
"loop": true,
"name": &"A",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_pr6kk")
}],
"loop": true,
"name": &"B",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_b6uv1")
}],
"loop": true,
"name": &"C",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_jfi4t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_uqcso")
}],
"loop": true,
"name": &"A",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_fhahs")
}],
"loop": true,
"name": &"B",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_et3xt")
}],
"loop": true,
"name": &"C",
"speed": 5.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_b6uv1"]

[node name="Main" type="Node2D"]
script = ExtResource("1_a7jvs")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_b226h")

[node name="Waves" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_hwjxs")
position = Vector2(0, 442)
scale = Vector2(1.1, 1)
texture = ExtResource("2_duh1u")
script = ExtResource("3_alxvg")

[node name="Waves2" type="Sprite2D" parent="Waves"]
use_parent_material = true
position = Vector2(2, 304)
texture = ExtResource("2_duh1u")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="M" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_b26wi")
position = Vector2(146.03, -101)
scale = Vector2(0.37, 0.37)
texture = ExtResource("5_rsiac")

[node name="J" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_ewknp")
position = Vector2(147.7, -101)
scale = Vector2(0.37, 0.37)
texture = ExtResource("6_3bmuq")

[node name="Logo" type="Label" parent="."]
visible = false
material = SubResource("ShaderMaterial_pgam6")
offset_left = -706.0
offset_top = -564.0
offset_right = 723.0
offset_bottom = -262.0
theme_override_colors/font_color = Color(0.6, 0.376471, 0.356863, 1)
theme_override_fonts/font = SubResource("FontVariation_nn7w8")
theme_override_font_sizes/font_size = 191
text = "Vine Moss Games"

[node name="Title" type="RichTextLabel" parent="."]
visible = false
material = SubResource("ShaderMaterial_a7jvs")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -312.0
offset_top = -771.0
offset_right = 1608.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.6, 0.376471, 0.356863, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_b26wi")
theme_override_font_sizes/normal_font_size = 25
text = "We 
Disentangled"
fit_content = true
tab_size = 24
vertical_alignment = 1

[node name="Title2" type="RichTextLabel" parent="."]
visible = false
material = SubResource("ShaderMaterial_a7jvs")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1699.0
offset_top = -693.0
offset_right = 221.0
offset_bottom = 387.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.6, 0.376471, 0.356863, 1)
theme_override_fonts/normal_font = SubResource("FontVariation_b26wi")
theme_override_font_sizes/normal_font_size = 25
text = "One 
Day"
fit_content = true
tab_size = 24
horizontal_alignment = 2
vertical_alignment = 1

[node name="MFull" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_odey0")
position = Vector2(-782, -93)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_yny27")
animation = &"A"

[node name="Layer1" type="AnimatedSprite2D" parent="MFull"]
material = SubResource("ShaderMaterial_3pufg")
position = Vector2(-9.83607, 0)
sprite_frames = SubResource("SpriteFrames_kddu7")
animation = &"A"

[node name="Layer2" type="AnimatedSprite2D" parent="MFull"]
material = SubResource("ShaderMaterial_2n2py")
sprite_frames = SubResource("SpriteFrames_uqcso")
animation = &"A"

[node name="TextureRect" type="TextureRect" parent="MFull"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 473.77
offset_top = -459.016
offset_right = 505.78
offset_bottom = -421.716
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.85, 0.85)
texture = SubResource("GradientTexture1D_jfi4t")

[node name="JFull" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_odey0")
position = Vector2(783, -93)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_k86p3")
animation = &"A"

[node name="Layer1" type="AnimatedSprite2D" parent="JFull"]
material = SubResource("ShaderMaterial_3pufg")
sprite_frames = SubResource("SpriteFrames_et3xt")
animation = &"A"

[node name="Layer2" type="AnimatedSprite2D" parent="JFull"]
material = SubResource("ShaderMaterial_2n2py")
position = Vector2(3.27869, 0)
sprite_frames = SubResource("SpriteFrames_jfi4t")
animation = &"A"

[node name="TextureRect2" type="TextureRect" parent="JFull"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 476.393
offset_top = -459.672
offset_right = 508.403
offset_bottom = -422.372
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.85, 0.85)
texture = SubResource("GradientTexture1D_jfi4t")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -977.0
offset_top = -564.0
offset_right = 971.0
offset_bottom = 579.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_b6uv1")

[connection signal="timeout" from="WaveTimer" to="Waves" method="_on_wave_timer_timeout"]
